# bow-sentiment-analysis-application

./: .gitignore  README.md  pyproject.toml
configs/: config.yaml
src/sentiment_analysis/: __init__.py  app.py  main.py
src/sentiment_analysis/libs/: data.py  evaluation.py  models.py  visualization.py  web.py
