[project]
name = "sentiment-analysis"
version = "0.1.0"
description = "Twitter sentiment analysis model classifying tweets as positive, negative, or neutral"
readme = "README.md"
authors = [
    { name = "chogerlate", email = "siwaratlaopromger4444@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.9.1",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "pyyaml>=6.0.1",
    "hydra-core>=1.3.2",
    "ipykernel>=6.29.5",
]

[project.scripts]
sentiment-train = "sentiment_analysis.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
